objects/Sub_Process__c.object
<CustomObject>
    <fields>
        <fullName>AIA_Number_of_Completed_tasks__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Completed tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AIA_Number_of_Not_Required_Tasks__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Not Required Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AIA_Sub_Process_End_Date__c</fullName>
        <description>End date of the sub process</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sub Process End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AIA_Sub_Process_Start_date__c</fullName>
        <description>Start date of the sub process</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sub Process Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field used to check whether Sub process record is active or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_SLA__c</fullName>
        <label>Actual SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_Tasks_Must_Be_Completed_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean check to see if all the Tasks are completed underneath sub Process</description>
        <label>All Tasks Must Be Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>unique identifier for a record that can be used when importing record, searable &amp; etc.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation</label>
        <referenceTo>AIA_Implementation__c</referenceTo>
        <relationshipLabel>Sub Process</relationshipLabel>
        <relationshipName>Sub_Process</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marked_as_Not_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field gets updated when user marks certain Sub Process as not required</description>
        <label>Marked as Not Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Blocked_Tasks__c</fullName>
        <label>Number of Blocked Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_In_Progress_Tasks__c</fullName>
        <label>Number of In Progress Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Not_Started_Tasks__c</fullName>
        <label>Number of Not Started Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Tasks_SLA_Broken__c</fullName>
        <label>Number of Tasks (SLA Broken)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Tasks__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used to count the number of Tasks in the parent Sub Process</description>
        <label>Number of Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sub Processes</relationshipLabel>
        <relationshipName>Sub_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Process_Stage__c</fullName>
        <formula>TEXT(  Process__r.Stage__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Process Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <description>Shows the percentage completion of sub process. This is percentage of (completed tasks+not required tasks)/total task count. If sub process is marked as not required, then percent complete will be 100.</description>
        <formula>IF(Marked_as_Not_Required__c,1,
IF(AND(AIA_Number_of_Completed_tasks__c=0,AIA_Number_of_Not_Required_Tasks__c=0,Total_Task_Count__c=0),1,((AIA_Number_of_Completed_tasks__c + AIA_Number_of_Not_Required_Tasks__c)/Total_Task_Count__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the percentage completion of sub process. This is percentage of (completed tasks+not required tasks)/total task count. If sub process is marked as not required, then percent complete will be 100.</inlineHelpText>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <referenceTo>Process__c</referenceTo>
        <relationshipLabel>Sub Process</relationshipLabel>
        <relationshipName>Sub_Processes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SLA_Day_Type__c</fullName>
        <label>SLA Day Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Calendar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <description>Used to identify the Sequence number of the record for sorting</description>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Used to identify the Stage of the Sub Process Record</description>
        <label>Sub Process Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group Structure</fullName>
                </value>
                <value>
                    <fullName>Enrollment Data Card</fullName>
                </value>
                <value>
                    <fullName>Benefit Setup</fullName>
                </value>
                <value>
                    <fullName>Change System Request</fullName>
                </value>
                <value>
                    <fullName>Performance Guarantee</fullName>
                </value>
                <value>
                    <fullName>Summary of Benefits and Coverage</fullName>
                </value>
                <value>
                    <fullName>Account Kick-off Meeting</fullName>
                </value>
                <value>
                    <fullName>Marketing Materials</fullName>
                </value>
                <value>
                    <fullName>Blue Rewards and Wellness</fullName>
                </value>
                <value>
                    <fullName>Setup Vision</fullName>
                </value>
                <value>
                    <fullName>Setup Magellan</fullName>
                </value>
                <value>
                    <fullName>Process Enrollment</fullName>
                </value>
                <value>
                    <fullName>Par Plan Custom Letters</fullName>
                </value>
                <value>
                    <fullName>Accommodation of Contraceptive Services</fullName>
                </value>
                <value>
                    <fullName>Benefit Contract</fullName>
                </value>
                <value>
                    <fullName>Implementation Plan</fullName>
                </value>
                <value>
                    <fullName>Benefit Design</fullName>
                </value>
                <value>
                    <fullName>CYC</fullName>
                </value>
                <value>
                    <fullName>Setup Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Setup Dental</fullName>
                </value>
                <value>
                    <fullName>Carve-Out Pharmacy</fullName>
                </value>
                <value>
                    <fullName>ID Cards</fullName>
                </value>
                <value>
                    <fullName>Administrative Service Agreement</fullName>
                </value>
                <value>
                    <fullName>Business Associate Agreement and Confirmation (BAA/BAC)</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>Benefit Request</fullName>
                </value>
                <value>
                    <fullName>ARC Approval</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Quote Delivered</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Used to identify the status of the record</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Process_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Process Template</label>
        <referenceTo>Sub_Process_Type__c</referenceTo>
        <relationshipLabel>Sub Process</relationshipLabel>
        <relationshipName>Sub_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Task_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used to update the count of Task associated to Sub process. Updated by AIA_WorkPlanController.</description>
        <label>Number of Total Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Used_For__c</fullName>
        <description>Used to identify whether it’s a pre-sales/post-sales active record</description>
        <label>Used For</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>Post-Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Run time Object used for AIA workplan Stage
AIA - Custom object used to store the Stage, type &amp; status of Runtime Sub Process. This object is a child object for Run time Process object. 
This is implemented for JUNE-2018 Release.</description>
    <label>Sub Process</label>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Sub Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sub Processes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Implementation__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>IMP_142052</fullName>
        <columns>NAME</columns>
        <columns>Implementation__c</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Implementation__c</field>
            <operation>equals</operation>
            <value>IMP-205021</value>
        </filters>
        <label>Close Out Sub processes</label>
    </listViews>
    <listViews>
        <fullName>Implementation_Sub_Process_Closure_View</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Implementation__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Implementation__c</field>
            <operation>equals</operation>
            <value>IMP-192332</value>
        </filters>
        <label>1- Implementation Sub Process Closure</label>
    </listViews>
    <validationRules>
        <fullName>SP001</fullName>
        <active>true</active>
        <description>User cannot change the status once it is "Completed"</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp;(ISPICKVAL(PRIORVALUE( Status__c ),"Completed")&amp;&amp; ISCHANGED( Status__c ))</errorConditionFormula>
        <errorMessage>SP001 : User cannot change the status once it is "Completed"</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPR001</fullName>
        <active>true</active>
        <description>User cannot change the status once it is "Completed"</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp;(ISPICKVAL(PRIORVALUE( Status__c ),"Completed")&amp;&amp; ISCHANGED( Status__c ))</errorConditionFormula>
        <errorMessage>SPR001 : User cannot change the status once it is "Completed"</errorMessage>
    </validationRules>
</CustomObject>